--- a/app/src/main/res/xml/grayscale_icon_map.xml
+++ b/app/src/main/res/xml/grayscale_icon_map.xml
@@ -31,7 +31,7 @@
     <icon drawable="@drawable/files"  package="com.google.android.documentsui" name="Files" />
     <icon drawable="@drawable/files"  package="com.android.documentsui" name="Files" />
     <icon drawable="@drawable/myjio"  package="com.jio.myjio" name="MyJio" />
-    <icon drawable="@drawable/APKTOOL_DUMMY_121"  package="nekox.messenger" name="Nekogram X" />
+    <icon drawable="@drawable/nekogram"  package="nekox.messenger" name="Nekogram X" />
     <icon drawable="@drawable/files"  package="com.sec.android.app.myfiles" name="Files" />
     <icon drawable="@drawable/spark_email"  package="com.readdle.spark" name="Spark Email" />
     <icon drawable="@drawable/pocket_casts"  package="au.com.shiftyjelly.pocketcasts" name="Pocket Casts" />
@@ -244,7 +244,7 @@
     <icon drawable="@drawable/chiji"  package="com.tencent.tmgp.pubgmhd" name="chiji3" />
     <icon drawable="@drawable/smzh"  package="com.tencent.tmgp.cod" name="smzh" />
     <icon drawable="@drawable/smzh"  package="com.activision.callofduty.shooter" name="smzhgj" />
-    <icon drawable="@drawable/APKTOOL_DUMMY_41"  package="Han.GJZS" name="gjzsh" />
+    <icon drawable="@drawable/gaoji"  package="Han.GJZS" name="gjzsh" />
     <icon drawable="@drawable/hupu"  package="com.hupu.games" name="hupu" />
     <icon drawable="@drawable/lvse"  package="com.oasisfeng.greenify" name="lvse" />
     <icon drawable="@drawable/lvse"  package="com.oasisfeng.greenify.pro" name="lvsepro" />
@@ -395,7 +395,7 @@
     <icon drawable="@drawable/ic_gov_anzong_androidnga"  package="gov.anzong.androidnga" name="nga" />
     <icon drawable="@drawable/ic_me_zhanghai_android_files"  package="me.zhanghai.android.files" name="质感文件" />
     <icon drawable="@drawable/ic_tech_gentleflow_fireworksreader"  package="tech.gentleflow.fireworksreader" name="tech.gentleflow.fireworksreader" />
-    <icon drawable="@drawable/ic_tw_nekomimi_nekogram"  package="tw.nekomimi.nekogram" name="nekogram" />
+    <icon drawable="@drawable/nekogram"  package="tw.nekomimi.nekogram" name="nekogram" />
     <icon drawable="@drawable/ic_xyz_hanks_note"  package="xyz.hanks.note" name="蜜蜂" />
     <icon drawable="@drawable/ic_com_mojang_minecraftpe"  package="com.mojang.minecraftpe" name="mc" />
     <icon drawable="@drawable/ic_com_example_bwappdoor"  package="com.example.bwappdoor" name="黑白门" />
@@ -724,7 +724,7 @@
     <icon drawable="@drawable/cleaner"  package="me.gm.cleaner" name="cleaner" />
     <icon drawable="@drawable/quora"  package="com.quora.android" name="quora" />
     <icon drawable="@drawable/notion"  package="notion.id" name="notion" />
-    <icon drawable="@drawable/gjzs"  package="Han.GJZS" name="gjzs" />
+    <icon drawable="@drawable/gaoji"  package="Han.GJZS" name="gjzs" />
     <icon drawable="@drawable/flipaclip"  package="com.vblast.flipaclip" name="flipaclip" />
     <icon drawable="@drawable/shortcut"  package="rk.android.app.shortcutmaker" name="shortcut" />
     <icon drawable="@drawable/nova"  package="com.teslacoilsw.launcher" name="nova" />
