--- a/app/src/main/res/drawable/qq.xml
+++ b/app/src/main/res/drawable/qq.xml
@@ -1,5 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector android:height="24.0dip" android:width="24.0dip" android:viewportWidth="240.0" android:viewportHeight="240.0"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000" android:pathData="M198.424,145.294C194.424,132.444 189.825,121.645 182.75,103.971C183.85,57.548 164.551,20 120.103,20C75.155,20 56.281,58.298 57.481,103.971C50.382,121.67 45.807,132.394 41.807,145.294C33.307,172.667 36.057,183.992 38.157,184.242C42.657,184.792 55.681,163.643 55.681,163.643C55.681,175.892 61.981,191.867 75.63,203.391C69.031,205.416 54.206,210.866 57.731,216.84C60.581,221.665 106.779,219.915 120.103,218.415C133.427,219.915 179.625,221.665 182.475,216.84C186,210.891 171.151,205.416 164.576,203.391C178.225,191.842 184.525,175.867 184.525,163.643C184.525,163.643 197.549,184.792 202.049,184.242C204.174,183.967 206.924,172.643 198.424,145.294Z" android:strokeColor="#00000000" android:strokeWidth="1.0" android:fillType="nonZero" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
+    android:viewportWidth="224"
+    android:viewportHeight="224"
+    android:width="280dp"
+    android:height="280dp">
+    <group
+        android:scaleX="0.1"
+        android:scaleY="-0.1"
+        android:translateY="224">
+        <path
+            android:pathData="M1006 1690c-146 -52 -245 -168 -262 -309 -4 -32 -14 -63 -23 -72 -29 -27 -46 -96 -33 -131 10 -27 8 -34 -25 -79 -64 -89 -98 -219 -73 -283 13 -35 25 -33 68 10 33 33 37 35 47 19 108 -186 221 -255 415 -255 183 0 324 82 401 233 11 20 21 37 23 37 2 0 20 -16 39 -35 42 -42 54 -43 67 -9 24 61 -3 173 -64 268 -27 42 -31 56 -24 76 15 40 3 106 -26 145 -15 20 -36 68 -47 108 -36 128 -100 205 -217 260 -87 40 -182 46 -266 17zm64 -190c40 -40 18 -160 -31 -173 -15 -4 -30 2 -50 23 -23 23 -29 37 -29 73 0 81 62 125 110 77zm189 -2c50 -53 27 -160 -35 -166 -42 -4 -66 33 -66 100 0 80 55 116 101 66zm44 -226c32 -11 61 -23 65 -26 10 -10 -31 -40 -123 -88 -102 -53 -144 -55 -234 -9 -77 39 -141 81 -141 91 0 10 43 27 115 45 81 20 240 13 318 -13zm-511 -67c74 -82 207 -122 372 -112 151 9 273 66 327 154 21 33 23 34 36 17 19 -26 16 -82 -8 -120 -24 -40 -118 -104 -197 -135 -47 -19 -77 -23 -167 -23 -128 0 -205 17 -312 69 -56 28 -78 45 -102 82 -34 51 -36 64 -19 114 10 30 12 31 22 14 6 -10 28 -37 48 -60zm24 -255c-3 -43 -2 -89 3 -103 11 -28 74 -57 126 -57 55 0 75 27 75 104l0 63 118 -1c126 -1 186 13 270 61 30 17 47 22 54 15 6 -6 9 -46 6 -99 -5 -108 -33 -169 -106 -234 -87 -78 -218 -107 -342 -75 -104 27 -166 75 -214 166 -29 56 -38 96 -37 167 1 79 7 96 33 82 19 -10 20 -17 14 -89zm112 39l63 -21 -3 -72c-3 -71 -3 -71 -33 -74 -44 -5 -103 15 -110 39 -8 23 4 149 14 149 4 0 35 -9 69 -21z"
+            android:fillColor="#000000" />
+        <path
+            android:pathData="M1024 1456c-11 -29 1 -61 23 -64 17 -3 24 3 29 22 10 42 -38 80 -52 42zm46 -14c0 -13 -12 -22 -22 -16 -10 6 -1 24 13 24 5 0 9 -4 9 -8z"
+            android:fillColor="#000000" />
+        <path
+            android:pathData="M1181 1448c-11 -30 -1 -46 14 -25 15 21 25 22 25 2 0 -8 5 -15 10 -15 14 0 13 33 -2 48 -19 19 -38 14 -47 -10z"
+            android:fillColor="#000000" />
+        <path
+            android:pathData="M1250 1210c-56 -23 -177 -26 -245 -5 -27 8 -51 13 -52 11 -9 -9 139 -76 166 -76 31 0 164 60 176 80 3 5 5 10 3 9 -2 -1 -23 -9 -48 -19z"
+            android:fillColor="#000000" />
+        <path
+            android:pathData="M726 680c-42 -47 -44 -59 -13 -88 57 -54 192 -76 290 -48 59 17 76 36 32 36 -59 0 -144 41 -246 120l-27 20 -36 -40z"
+            android:fillColor="#000000" />
+        <path
+            android:pathData="M1435 684c-51 -45 -149 -93 -211 -103l-49 -8 39 -17c118 -52 325 -11 334 66 2 18 -7 37 -28 62 -18 20 -35 36 -39 36 -3 -1 -24 -17 -46 -36z"
+            android:fillColor="#000000" />
+    </group>
 </vector>
