--- a/app/src/main/res/drawable/qq.xml
+++ b/app/src/main/res/drawable/qq.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
-    android:viewportWidth="224"
-    android:viewportHeight="224"
-    android:width="280dp"
-    android:height="280dp">
+    android:viewportWidth="240.0"
+    android:viewportHeight="240.0"
+    android:width="24.0dip"
+    android:height="24.0dip">
     <group
         android:scaleX="0.1"
         android:scaleY="-0.1"
