--- a/app/src/main/res/xml/grayscale_icon_map.xml
+++ b/app/src/main/res/xml/grayscale_icon_map.xml
@@ -928,4 +928,12 @@
     <icon drawable="@drawable/themed_icon_youtube_tv" package="com.google.android.apps.youtube.unplugged" />
     <icon drawable="@array/grayscale_clock_icons" package="com.google.android.deskclock" />
 
+
+
+
+    <icon drawable="@drawable/grayscale_clock_icons"  package="com.sec.android.app.clockpackage " name="时钟  "/>
+    <icon drawable="@array/grayscale_calendar_icons"  package="com.samsung.android.calendar " name="日历"/>
+
+
+
 </icons>
