--- a/app/src/main/res/xml/grayscale_icon_map.xml
+++ b/app/src/main/res/xml/grayscale_icon_map.xml
@@ -896,7 +896,7 @@
     <icon drawable="@drawable/themed_icon_google_fi" package="com.google.android.apps.tycho" />
     <icon drawable="@drawable/themed_icon_news" package="com.google.android.apps.magazines" />
     <icon drawable="@drawable/themed_icon_settings" package="com.android.settings" />
-    <icon drawable="@array/grayscale_calendar_icons" package="com.google.android.calendar" />
+
     <icon drawable="@drawable/themed_icon_files" package="com.google.android.apps.nbu.files" />
     <icon drawable="@drawable/themed_icon_google_one" package="com.google.android.apps.subscriptions.red" />
     <icon drawable="@drawable/themed_icon_photos" package="com.google.android.apps.photos" />
@@ -926,14 +926,13 @@
     <icon drawable="@drawable/themed_icon_maps" package="com.google.android.apps.maps" />
     <icon drawable="@drawable/themed_icon_podcasts" package="com.google.android.apps.podcasts" />
     <icon drawable="@drawable/themed_icon_youtube_tv" package="com.google.android.apps.youtube.unplugged" />
-    <icon drawable="@array/grayscale_clock_icons" package="com.google.android.deskclock" />
+    <icon drawable="@drawable/themed_icon_clock" package="com.google.android.deskclock" />
 
 
 
 
-    <icon drawable="@drawable/grayscale_clock_icons"  package="com.sec.android.app.clockpackage " name="时钟  "/>
-    <icon drawable="@array/grayscale_calendar_icons"  package="com.samsung.android.calendar " name="日历"/>
-
-
-
+    <icon drawable="@drawable/themed_icon_clock"  package="com.sec.android.app.clockpackage " name="时钟  "/>
+    <icon drawable="@drawable/themed_icon_contacts"  package="com.samsung.android.app.contacts " name="联系人"/>
+    <icon drawable="@drawable/yjtq"  package="com.sec.android.daemonapp " name="天气 "/>
+    <icon drawable="@drawable/telegram"  package="ir.ilmili.telegraph " name="telegraph "/>
 </icons>
